force-app/main/default/objects/vlocity_ins__FulfilmentRequest__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AccountId</description>
    <inlineHelpText>AccountId</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FulfilmentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>