force-app/main/default/objects/vlocity_ins__FulfilmentRequest__c/fields/vlocity_ins__FirstVersionFRId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FirstVersionFRId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the first time this fulfilment request was introduced in the various versions of the current inflight orders.</description>
    <label>First Fulfilment Request Version</label>
    <referenceTo>vlocity_ins__FulfilmentRequest__c</referenceTo>
    <relationshipLabel>Fulfilment Request revisions</relationshipLabel>
    <relationshipName>LaterVersionFRs</relationshipName>
    <type>Lookup</type>
</CustomField>