force-app/main/default/objects/vlocity_ins__FulfilmentRequest__c/fields/vlocity_ins__orchestrationPlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__orchestrationPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Plan</label>
    <referenceTo>vlocity_ins__OrchestrationPlan__c</referenceTo>
    <relationshipLabel>Fulfilment Requests</relationshipLabel>
    <relationshipName>FulfilmentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>