force-app/main/default/objects/vlocity_ins__FulfilmentRequest__c/fields/vlocity_ins__SupersededFRId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SupersededFRId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Superseded FR</description>
    <label>Superseded FR</label>
    <referenceTo>vlocity_ins__FulfilmentRequest__c</referenceTo>
    <relationshipLabel>Superseding FRs</relationshipLabel>
    <relationshipName>SupersedingFRs</relationshipName>
    <type>Lookup</type>
</CustomField>